--- a/src/app/views/dashboard.component.html
+++ b/src/app/views/dashboard.component.html
@@ -1,9 +1,15 @@
-<header>Header</header>
-<router-outlet></router-outlet>
-<!-- Placeholder Navigation -->
-<nav>
-    <ul>
-        <li routerLink="">How</li>
-        <li routerLink="where">Where</li>
-    </ul>
-</nav>
+<div class="app">
+    <div class="app-container">
+        <header>Vent2U</header>
+        <div class="app-content">
+            <router-outlet></router-outlet>
+        </div>
+        <!-- Placeholder Navigation -->
+        <nav>
+            <ul>
+                <li routerLink="">How</li>
+                <li routerLink="where">Where</li>
+            </ul>
+        </nav>
+    </div>
+</div>
