--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;700&display=swap');
+body {
+    margin: 0;
+    font-family: 'Work Sans', sans-serif;
+    overflow: auto;
+    overflow-x: hidden;
+    height: 100vh;
+    display: flow-root;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+*:not(mat-icon) {
+    font-family: 'Work Sans', sans-serif !important;
+    /* Add !important to overwrite all elements */
+}
