Lighter fonts and wider questions

--- a/src/app/views/feelings/how/how.component.css
+++ b/src/app/views/feelings/how/how.component.css
@@ -1,3 +1,8 @@
+:host {
+    width: 100%;
+    text-align: center;
+}
+
 .questions {
     list-style: none;
     padding: 0;
@@ -6,13 +11,18 @@
     width: 100%;
 }
 
+h1 {
+    font-weight: 300;
+}
+
 .questions li {
     background-color: rgba(255, 255, 255, 0.15);
     text-align: center;
-    padding: 15px 0;
+    padding: 20px 0;
     border-radius: 14px;
     font-size: 20px;
     width: 100%;
+    font-weight: 300;
 }
 
 .questions li:not(:last-of-type) {
