--- a/src/app/views/feelings/how/how.component.html
+++ b/src/app/views/feelings/how/how.component.html
@@ -1,7 +1,9 @@
-<h1>How do you feel?</h1>
-<ul class="questions">
-    <li>Too hot</li>
-    <li>Too cold</li>
-    <li>A little cold</li>
-    <li>A little hot</li>
-</ul>
+<div class="feelings">
+    <h1>How do you feel?</h1>
+    <ul class="questions">
+        <li>Too hot</li>
+        <li>Too cold</li>
+        <li>A little cold</li>
+        <li>A little hot</li>
+    </ul>
+</div>
