Make a progression line

--- a/src/app/views/dashboard.component.html
+++ b/src/app/views/dashboard.component.html
@@ -1,14 +1,21 @@
 <div class="app">
     <div class="app-container">
-        <header>Vent2U</header>
+        <header>
+            <span class="brand-name">Vent2U</span>
+            <div class="zone">
+                Zone 2
+            </div>
+        </header>
         <div class="app-content">
             <router-outlet></router-outlet>
         </div>
         <!-- Placeholder Navigation -->
         <nav>
             <ul>
-                <li routerLink="">How</li>
-                <li routerLink="where">Where</li>
+                <li routerLink="">1. How</li>
+                <li routerLink="where">2. Where</li>
+                <li>3. Confirm</li>
+                <li>4. Status</li>
             </ul>
         </nav>
     </div>
