--- a/src/app/views/feelings/how/how.component.html
+++ b/src/app/views/feelings/how/how.component.html
@@ -1,9 +1,9 @@
 <div class="feelings">
     <h1>How do you feel?</h1>
     <ul class="questions">
-        <li>Too hot</li>
-        <li>Too cold</li>
-        <li>A little cold</li>
-        <li>A little hot</li>
+        <li routerLink="where">Too hot</li>
+        <li routerLink="where">Too cold</li>
+        <li routerLink="where">A little cold</li>
+        <li routerLink="where">A little hot</li>
     </ul>
 </div>
