--- a/src/app/views/feelings/where/where.component.html
+++ b/src/app/views/feelings/where/where.component.html
@@ -1,1 +1,8 @@
-<h1>Where do you feel</h1>
+<div class="feelings">
+    <h1>Where do you feel?</h1>
+    <ul class="questions">
+        <li routerLink="how">Head</li>
+        <li routerLink="how">Torso</li>
+        <li routerLink="how">Feet</li>
+    </ul>
+</div>
