--- a/src/app/views/dashboard.component.css
+++ b/src/app/views/dashboard.component.css
@@ -38,6 +38,8 @@ header {
     padding-top: 15px;
     font-size: 20px;
     font-weight: 300;
+    display: flex;
+    justify-content: space-between;
 }
 
 
@@ -55,13 +57,16 @@ nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    font-size: 24px;
+    font-size: 16px;
+    text-align: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding-left: 30px;
-    padding-right: 30px;
+    grid-column-gap: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 nav ul li {
     display: inline-block;
+    text-align: center;
 }
