--- a/src/app/views/dashboard.component.html
+++ b/src/app/views/dashboard.component.html
@@ -13,7 +13,8 @@
         <nav>
             <ul>
                 <li routerLink="">1. How</li>
-                <li routerLink="where">2. Where</li>
+                <li routerLink="humidity">2. Humidity</li>
+                <li routerLink="temperature">3. Temperature</li>
                 <li>3. Confirm</li>
                 <li>4. Status</li>
             </ul>
