--- a/src/app/views/dashboard.component.css
+++ b/src/app/views/dashboard.component.css
@@ -57,13 +57,13 @@ nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    font-size: 16px;
+    font-size: 8px;
     text-align: center;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-column-gap: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 nav ul li {
