--- a/src/app/views/feelings/room/room.component.css
+++ b/src/app/views/feelings/room/room.component.css
@@ -9,6 +9,9 @@
     margin: 0;
     margin-top: 30px;
     width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 50px;
 }
 
 h1 {
@@ -20,7 +23,7 @@ h1 {
     text-align: center;
     padding: 20px 0;
     border-radius: 14px;
-    font-size: 20px;
+    font-size: 14px;
     width: 100%;
     font-weight: 300;
 }
