--- a/src/app/views/feelings/room/room.component.html
+++ b/src/app/views/feelings/room/room.component.html
@@ -1,12 +1,33 @@
 <div class="room">
     <h1>How does the room feel?</h1>
     <ul class="questions">
-        <li routerLink="where">Hot/Cold</li>
-        <li routerLink="where">Too Smelly</li>
-        <li routerLink="where">Not enough <br>fresh air</li>
-        <li routerLink="where">Too sweaty</li>
-        <li routerLink="where">Freezing</li>
-        <li routerLink="where">Too windy</li>
-        <li routerLink="where">Humid/Dry</li>
+        <li routerLink="where">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            Hot/Cold
+        </li>
+        <li routerLink="where">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            Too Smelly
+        </li>
+        <li routerLink="where">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            Not enough <br>fresh air
+        </li>
+        <li routerLink="where">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">whatshot</mat-icon>
+            Too sweaty
+        </li>
+        <li routerLink="where">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">ac_unit</mat-icon>
+            Freezing
+        </li>
+        <li routerLink="where">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            Too windy
+        </li>
+        <li routerLink="where">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            Humid/Dry
+        </li>
     </ul>
 </div>
