--- a/src/app/shared/_components/GoBack/goback.component.css
+++ b/src/app/shared/_components/GoBack/goback.component.css
@@ -1,9 +1,12 @@
 .back {
     background-color: rgba(255, 255, 255, 0.15);
     width: 100%;
-    padding: 15px 0;
+    padding: 18px 0;
     text-align: center;
     font-size: 15px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .back span {
