--- a/src/app/views/feelings/temperature/temperature.component.html
+++ b/src/app/views/feelings/temperature/temperature.component.html
@@ -1,5 +1,5 @@
 <h1>Temperature</h1>
-<h2>How do you feel?</h2>
+<h2 routerLink="/confirmation">How do you feel?</h2>
 <ul class="temperature">
     <li>Little hot</li>
     <li>Choose one</li>
