--- a/src/app/views/dashboard.component.html
+++ b/src/app/views/dashboard.component.html
@@ -4,6 +4,7 @@
             <span class="brand-name">Vent2U</span>
             <div class="zone">
                 Zone 2
+                <mat-icon aria-hidden="false" aria-label="Select choose">create</mat-icon>
             </div>
         </header>
         <div class="app-content">
