--- a/src/app/views/feelings/room/room.component.html
+++ b/src/app/views/feelings/room/room.component.html
@@ -2,16 +2,16 @@
     <h1>How does the room feel?</h1>
     <ul class="questions">
         <li routerLink="/humidity">
-            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Example home icon">whatshot</mat-icon>
             Hot/Cold
         </li>
         <li routerLink="/humidity">
-            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Example home icon">dry</mat-icon>
             Too Smelly
         </li>
         <li routerLink="/humidity">
-            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-            Not enough <br>fresh air
+            <mat-icon aria-hidden="false" aria-label="Example home icon">toys</mat-icon>
+            Fresh air
         </li>
         <li routerLink="/humidity">
             <mat-icon aria-hidden="false" aria-label="Example home icon">whatshot</mat-icon>
@@ -22,11 +22,11 @@
             Freezing
         </li>
         <li routerLink="/humidity">
-            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Example home icon">waves</mat-icon>
             Too windy
         </li>
         <li routerLink="/humidity">
-            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Example home icon">invert_colors_off</mat-icon>
             Humid/Dry
         </li>
     </ul>
