--- a/src/app/views/dashboard.component.css
+++ b/src/app/views/dashboard.component.css
@@ -10,7 +10,7 @@
 
 .app.special {
     background: white;
-    color: #005500;
+    color: #021b79;
 }
 
 .app-container {
@@ -40,6 +40,7 @@ header {
     font-weight: 300;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 
@@ -51,6 +52,25 @@ nav {
     bottom: 0;
     padding: 30px 0;
     left: 0;
+}
+
+.zone {
+    background-color: #2f88e6;
+    color: #FFF;
+    padding: 5px 8px;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    margin-right: -30px;
+    display: flex;
+    align-items: center;
+}
+
+.zone mat-icon {
+    margin-left: 5px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 nav ul {
