--- a/src/app/views/feelings/room/room.component.css
+++ b/src/app/views/feelings/room/room.component.css
@@ -11,7 +11,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 50px;
+    grid-column-gap: 30px;
 }
 
 h1 {
@@ -21,11 +21,12 @@ h1 {
 .questions li {
     background-color: rgba(255, 255, 255, 0.15);
     text-align: center;
-    padding: 20px 0;
+    padding: 20px 10px;
     border-radius: 14px;
-    font-size: 14px;
+    font-size: 18px;
     width: 100%;
     font-weight: 300;
+    box-sizing: border-box;
 }
 
 .questions li:not(:last-of-type) {
@@ -35,5 +36,8 @@ h1 {
 mat-icon {
     display: inline-block;
     width: 100%;
-    font-size: 44px;
+    font-size: 60px;
+    line-height: normal;
+    height: auto;
+    margin-bottom: 10px;
 }
