--- a/src/app/views/request/status/status.component.html
+++ b/src/app/views/request/status/status.component.html
@@ -1,6 +1,6 @@
 <h1>Waiting for approval</h1>
 <div class="approval-count">
-    <div class="count">0/4</div>
+    <div class="count">{{ votecount }}/{{ totalvotes }}</div>
 </div>
 <ul class="feeling-list">
     <li>Very hot</li>
