--- a/src/app/views/request/result/result.component.css
+++ b/src/app/views/request/result/result.component.css
@@ -7,66 +7,86 @@ h1 {
     text-align: center;
     font-weight: 600;
     color: #021b78;
-    margin-bottom: 1rem;
+    margin-bottom: 10rem;
 }
 
-ul {
+ul.result-list {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 15rem;
 }
 
-ul li {
+ul.result-list>li {
     display: grid;
     font-size: 40px;
     font-weight: 400;
     color: #FFF;
     background-color: #7cb7f1;
-    font-size: 14px;
-    padding: 10px 12px;
-    border-radius: 1.5rem;
+    font-size: 18px;
+    padding: 14px 10px 14px 10px;
+    border-radius: 1.8rem;
     text-align: center;
     margin-bottom: 15px;
     vertical-align: middle;
-    width: 50%;
-    grid-template-columns: 1fr 2fr 0.7fr;
+    width: 60%;
+    grid-template-columns: auto 2.3fr 0.3fr;
     text-align: center;
+    line-height: 1.6;
+    transition: 0.3s ease-in-out;
 }
 
-ul li mat-icon {
+ul li.approved {
+    background-color: #cce6cb;
+    color: #008001;
+    transition: 0.3s ease-in-out;
+}
+
+ul li.approved .item-status {
+    background-color: #008001;
+    color: #FFF;
+    transition: 0.3s ease-in-out;
+}
+
+ul li.denied {
+    background-color: #fecbd0;
+    color: #f90014;
+}
+
+ul li.denied .item-status {
+    background-color: #f90014;
+    color: #FFF;
+}
+
+md-spinner {
+    float: left;
+    width: 24px;
+    height: 24px;
+    margin: 5px 10px 0px 0px;
+}
+
+ul li>mat-icon {
     vertical-align: middle;
+    display: inline-block;
     padding-left: 5px;
+    font-size: 28px;
+    height: auto;
 }
 
-ul li:nth-of-type(even) {
-    margin-left: 15px;
-}
-
-.approval-count {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 4rem;
-}
-
-.count {
+.item-status {
+    height: 28px;
+    width: 28px;
+    background-color: #021b78;
     border-radius: 100%;
-    border: 3px solid #021b78;
-    width: 5rem;
-    height: 5rem;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 37px;
-    color: #021b78;
-    font-weight: 600;
 }
 
-.cancel-request {
-    text-align: center;
-    font-weight: 600;
-    color: #021b78;
-    font-size: 22px;
-    margin-top: 8rem;
+.item-status mat-icon {
+    font-size: 18px;
+    height: auto;
 }
