--- a/src/app/views/request/result/result.component.html
+++ b/src/app/views/request/result/result.component.html
@@ -1,17 +1,14 @@
-<h1>Waiting for approval</h1>
-<div class="approval-count">
-    <div class="count">{{ votecount }}/{{ totalvotes }}</div>
-</div>
-<ul class="feeling-list">
-    <li>
-        <mat-icon aria-hidden="false" aria-label="Example home icon">whatshot</mat-icon>
-        Hot/Cold
-    </li>
-    <li>
-        <mat-icon aria-hidden="false" aria-label="Example home icon">dry</mat-icon>
-        Too Smelly
+<h1>Applying changes...</h1>
+<ul class="result-list">
+    <li *ngFor="let item of list" class="{{ item.status }}">
+        <mat-icon aria-hidden="false" aria-label="Test">{{ item.icon }}</mat-icon>
+        {{ item.name }}
+        <span *ngIf="!item.status">
+            <mat-spinner [diameter]="25"></mat-spinner>
+        </span>
+        <span class="item-status" *ngIf='item.status'>
+            <mat-icon *ngIf="item.status=='approved'">done</mat-icon>
+            <mat-icon *ngIf="item.status=='denied'">close</mat-icon>
+        </span>
     </li>
 </ul>
-<div class="cancel-request" routerLink="/">
-    Cancel Request
-</div>
