--- a/src/app/views/request/confirmation/confirmation.component.css
+++ b/src/app/views/request/confirmation/confirmation.component.css
@@ -17,6 +17,11 @@ ul {
     justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 3rem;
+    transition: 0.3s ease-in-out;
+}
+
+ul.only-one {
+    justify-content: center;
 }
 
 ul li {
@@ -36,6 +41,7 @@ ul li {
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
+    transition: 0.3s ease-in-out;
 }
 
 .item-remove {
