--- a/src/app/views/request/confirmation/confirmation.component.html
+++ b/src/app/views/request/confirmation/confirmation.component.html
@@ -1,5 +1,5 @@
 <h1>I feel</h1>
-<ul class="feeling-list">
+<ul class="feeling-list" [ngClass]="{'only-one': list.length==1}">
     <li *ngFor="let item of list" class="{{ item.status }}">
         <mat-icon aria-hidden="false" aria-label="Test">{{ item.icon }}</mat-icon>
         {{ item.name }}
