Updated temperature/humidity to be dynamic instead of hardcoded

--- a/src/app/views/feelings/humidity/humidity.component.html
+++ b/src/app/views/feelings/humidity/humidity.component.html
@@ -1,5 +1,10 @@
 <h1>Humidity</h1>
 <h2>How do you feel?</h2>
 <ul class="humidity">
-    <li routerLink="/temperature">3. Temperature</li>
+    <li *ngFor="let item of humidity" (click)="selectItem(item.id)" [ngClass]="{'selected': item.selected }">
+        {{ item.name }}
+    </li>
 </ul>
+<div class="confirm-wrapper" [ngClass]="{'active': selectedItem }">
+    <button routerLink="/temperature">Confirm</button>
+</div>
