--- a/src/app/views/feelings/room/room.component.html
+++ b/src/app/views/feelings/room/room.component.html
@@ -2,7 +2,7 @@
     <h1>How does the room feel?</h1>
     <ul class="questions">
         <li routerLink="/humidity">
-            <mat-icon aria-hidden="false" aria-label="Example home icon">whatshot</mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Example home icon">local_fire_department</mat-icon>
             Hot/Cold
         </li>
         <li routerLink="/humidity">
