--- a/src/app/views/feelings/temperature/temperature.component.html
+++ b/src/app/views/feelings/temperature/temperature.component.html
@@ -1,8 +1,10 @@
 <h1>Temperature</h1>
-<h2 routerLink="/confirmation">How do you feel?</h2>
-<ul class="temperature">
-    <li>Little hot</li>
-    <li>Choose one</li>
-    <li>Little cold</li>
+<ul class="humidity">
+    <li *ngFor="let item of humidity" (click)="selectItem(item.id)" [ngClass]="{'selected': item.selected }">
+        {{ item.name }}
+    </li>
 </ul>
+<div class="confirm-wrapper" [ngClass]="{'active': selectedItem }">
+    <button routerLink="/confirmation">Confirm</button>
+</div>
 <goback></goback>
