--- a/src/app/views/request/voting/voting.component.html
+++ b/src/app/views/request/voting/voting.component.html
@@ -2,7 +2,7 @@
 <div class="voting">
     <ul class="feeling-list">
         <li routerLink="/humidity" class="selected">
-            <mat-icon aria-hidden="false" aria-label="Example home icon">whatshot</mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Example home icon">local_fire_department</mat-icon>
             Hot/Cold
         </li>
         <li routerLink="/humidity">
