--- a/src/app/views/feelings/humidity/humidity.component.css
+++ b/src/app/views/feelings/humidity/humidity.component.css
@@ -3,3 +3,51 @@ h2 {
     text-align: center;
     font-weight: 300;
 }
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+}
+
+ul li {
+    font-size: 24px;
+    text-align: center;
+    line-height: normal;
+    opacity: 0.4;
+    transition: 0.3s ease-in-out;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+ul li.selected {
+    opacity: 1;
+    transform: scale(2);
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.confirm-wrapper {
+    width: 100%;
+    text-align: center;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+}
+
+.confirm-wrapper.active {
+    opacity: 1;
+}
+
+button {
+    display: inline-block;
+    border-radius: 2.5rem;
+    border: 0;
+    background-image: none;
+    padding: 25px 50px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #FFF;
+    background-color: #021b78;
+}
