--- a/src/app/views/request/result/result.component.css
+++ b/src/app/views/request/result/result.component.css
@@ -8,6 +8,7 @@ h1 {
     font-weight: 600;
     color: #021b78;
     margin-bottom: 10rem;
+    font-size: 20px;
 }
 
 ul.result-list {
@@ -97,4 +98,35 @@ ul li>mat-icon {
     color: #021b78;
     font-size: 22px;
     margin-top: 8rem;
+    opacity: 0;
+    pointer-events: none;
+    transition: 1s ease-in-out;
+}
+
+.return.active {
+    pointer-events: all;
+    opacity: 1;
+}
+
+.applying:after {
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: bottom;
+    -webkit-animation: ellipsis steps(4, end) 5000ms infinite;
+    animation: ellipsis steps(4, end) 5000ms infinite;
+    content: "\2026";
+    /* ascii code for the ellipsis character */
+    width: 0px;
+}
+
+@keyframes ellipsis {
+    to {
+        width: 1.25em;
+    }
+}
+
+@-webkit-keyframes ellipsis {
+    to {
+        width: 1.25em;
+    }
 }
