--- a/src/app/views/request/status/status.component.css
+++ b/src/app/views/request/status/status.component.css
@@ -15,12 +15,20 @@ ul {
     margin: 0;
     padding: 0;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 3rem;
+    transition: 0.3s ease-in-out;
+}
+
+ul.only-one {
     justify-content: center;
 }
 
 ul li {
-    display: grid;
+    text-align: left;
     font-size: 40px;
+    line-height: normal;
     font-weight: 400;
     color: #FFF;
     background-color: #7cb7f1;
@@ -28,20 +36,20 @@ ul li {
     padding: 10px 12px;
     border-radius: 1.5rem;
     text-align: center;
+    width: 40%;
     margin-bottom: 15px;
     vertical-align: middle;
-    width: 50%;
-    grid-template-columns: 1fr 2fr 0.3fr;
-    text-align: center;
+    grid-template-columns: 1fr 6fr 0.5fr;
+    transition: 0.3s ease-in-out;
+    display: grid;
 }
 
 ul li mat-icon {
-    vertical-align: middle;
-    padding-left: 5px;
-}
-
-ul li:nth-of-type(even) {
-    margin-left: 15px;
+    display: inline-block;
+    font-size: 20px;
+    height: auto;
+    justify-self: start;
+    display: flex;
 }
 
 .approval-count {
