Finished implementing vent claim system

--- a/src/app/views/dashboard.component.html
+++ b/src/app/views/dashboard.component.html
@@ -1,23 +1,11 @@
 <div class="app">
+    <header>
+        <span class="brand-name">Vent2U</span>
+        <button type="button" class="zone" routerLink="zones">Zone 2</button>
+    </header>
     <div class="app-container">
-        <header>
-            <span class="brand-name">Vent2U</span>
-            <div class="zone">
-                Zone 2
-            </div>
-        </header>
         <div class="app-content">
             <router-outlet></router-outlet>
         </div>
-        <!-- Placeholder Navigation -->
-        <nav>
-            <ul>
-                <li routerLink="">1. How</li>
-                <li routerLink="humidity">2. Humidity</li>
-                <li routerLink="temperature">3. Temperature</li>
-                <li>3. Confirm</li>
-                <li>4. Status</li>
-            </ul>
-        </nav>
     </div>
 </div>
