--- a/src/app/views/dashboard.component.css
+++ b/src/app/views/dashboard.component.css
@@ -19,7 +19,6 @@
     margin-right: auto;
     padding-left: 30px;
     padding-right: 30px;
-    height: 100%;
 }
 
 .app-content {
@@ -27,8 +26,6 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    /* Equal to navigation height */
-    height: calc(100% - 80px);
 }
 
 
@@ -69,4 +66,17 @@ nav ul {
 nav ul li {
     display: inline-block;
     text-align: center;
+}
+
+.brand-name{
+    margin-left: 15px;
+}
+
+.zone{
+    background-color: rgba(255,255,255,0.4);
+    border-radius: 20px 0 0 20px;
+    padding: 7px 15px;
+    color: white;
+    border: none;
+    font-size: 0.9em;
 }
