Add back module to other pages too + Styling fix to confirmation view

--- a/src/app/views/feelings/humidity/humidity.component.html
+++ b/src/app/views/feelings/humidity/humidity.component.html
@@ -8,3 +8,4 @@
 <div class="confirm-wrapper" [ngClass]="{'active': selectedItem }">
     <button routerLink="/temperature">Confirm</button>
 </div>
+<goback></goback>
