--- a/src/app/views/request/confirmation/confirmation.component.css
+++ b/src/app/views/request/confirmation/confirmation.component.css
@@ -16,8 +16,14 @@ ul {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: 3rem;
     transition: 0.3s ease-in-out;
+}
+
+.list-wrapper {
+    margin-top: 7rem;
+    margin-bottom: 10rem;
+    height: 15rem;
+    overflow-y: scroll;
 }
 
 ul.only-one {
@@ -70,7 +76,6 @@ mat-icon {
     font-size: 20px;
     font-weight: 500;
     color: #0675e8;
-    margin-bottom: 10rem;
 }
 
 .add-more span {
@@ -96,6 +101,12 @@ mat-icon {
     font-size: 20px;
     pointer-events: none;
     color: #021b78;
+    opacity: 1;
+    transition: 0.5s ease-in-out;
+}
+
+.confirm-selection.active .component-text {
+    opacity: 0;
 }
 
 .pullee {
@@ -141,6 +152,7 @@ mat-icon {
     transition: transform ease-out 100ms;
     cursor: -webkit-grab;
     cursor: -moz-grab;
+    box-shadow: 2px 2px 10px #000;
 }
 
 .pullee::-moz-range-thumb {
