Cursor pointer on click elements

--- a/src/app/views/feelings/room/room.component.css
+++ b/src/app/views/feelings/room/room.component.css
@@ -27,6 +27,7 @@ h1 {
     width: 100%;
     font-weight: 300;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 .questions li:not(:last-of-type) {
