Create a button for returning to confirmation screen from 'add more'

--- a/src/app/views/feelings/humidity/humidity.component.html
+++ b/src/app/views/feelings/humidity/humidity.component.html
@@ -6,6 +6,6 @@
     </li>
 </ul>
 <div class="confirm-wrapper" [ngClass]="{'active': selectedItem }">
-    <button routerLink="/temperature">Confirm</button>
+    <button (click)="confirmSelection()">Confirm</button>
 </div>
 <goback></goback>
