--- a/src/app/views/feelings/room/room.component.css
+++ b/src/app/views/feelings/room/room.component.css
@@ -42,3 +42,17 @@ mat-icon {
     height: auto;
     margin-bottom: 10px;
 }
+
+.confirmation {
+    display: inline-block;
+    border-radius: 2.5rem;
+    border: 0;
+    background-image: none;
+    padding: 25px 50px;
+    font-size: 15px;
+    font-weight: 600;
+    color: #FFF;
+    background-color: #021b78;
+    margin-top: 3rem;
+    cursor: pointer;
+}
