login component with service and backend work 100%

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<div>
+    <p>Login to get access to change the temperature</p>
+
+    <form class="login-form" [formGroup]="LoginForm" (ngSubmit)="Login()">
+        <mat-form-field>
+            <input matInput placeholder="Email" formControlName="email" [(ngModel)]="email">
+        </mat-form-field>
+            <mat-error *ngIf="LoginForm.controls.email.touched && LoginForm.controls.email.errors?.pattern">
+                Please input a valid email
+            </mat-error>
+
+            <mat-error *ngIf="LoginForm.controls.email.touched && LoginForm.controls.email.errors?.required">
+                Something is wrong, try again
+            </mat-error>
+
+        <mat-form-field>
+            <input matInput type="password" placeholder="Password" formControlName="password" [(ngModel)]="password">
+        </mat-form-field>
+            <mat-error *ngIf= "LoginForm.controls.password.touched && LoginForm.controls.password.errors?.required">
+                Please input a valid password
+            </mat-error>
+        <button type="submit" mat-button color="primary">Login</button>
+    </form>
+</div>
+
