Fixed errors with route navigation; Removed Login

--- a/src/app/views/dashboard.component.html
+++ b/src/app/views/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="app-container">
         <header>
             <span class="brand-name">Vent2U</span>
-            <button type="button" routerLink="zones" class="zone">
+            <button type="button" routerLink="/zones" class="zone">
                 Zone 2
                 <mat-icon aria-hidden="false" aria-label="Select choose">create</mat-icon>
             </button>
