Added button to learning element

--- a/src/app/views/game/game-dashboard/game-dashboard.component.html
+++ b/src/app/views/game/game-dashboard/game-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="app">
   <header>
-    <span class="brand-name">Vent2U</span>
+    <span class="brand-name" routerLink="/home">Vent2U</span>
     <h2>Can you fix it?</h2>
     <button type="button" routerLink="zones" class="level">
       Level {{level}}
