--- a/src/app/views/dashboard.component.css
+++ b/src/app/views/dashboard.component.css
@@ -102,3 +102,14 @@ nav ul li {
     border: none;
     font-size: 0.9em;
 }
+
+.game{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(5, 117, 230);
+    border: none;
+    padding: 20px;
+    color: white;
+    border-radius: 13px 0 0 0;
+}
