--- a/src/app/views/dashboard.component.html
+++ b/src/app/views/dashboard.component.html
@@ -10,5 +10,6 @@
         <div class="app-content">
             <router-outlet></router-outlet>
         </div>
+        <button routerLink="/game" class="game"><mat-icon aria-hidden="false" aria-label="Learn!">import_contacts</mat-icon></button>
     </div>
 </div>
