--- a/src/app/views/game/game-dashboard/game-dashboard.component.html
+++ b/src/app/views/game/game-dashboard/game-dashboard.component.html
@@ -7,17 +7,17 @@
   </button>
   </header>
     <div class="container">
-      <mat-card *ngIf="isInChallenge">
+      <mat-card id="gameCard" *ngIf="isInChallenge">
         <mat-card-title [innerHTML]="tip"></mat-card-title>
         <game-slider (onValueChanged)="SetAnswer($event)" [unit]="slider.unit" [range]="slider.range" *ngFor="let slider of game[level-1].sliders"></game-slider>
       </mat-card>
 
-      <mat-card *ngIf="!isInChallenge">
+      <mat-card id="learnCard" class="animate__animated animate__fadeInUp animate__faster" *ngIf="!isInChallenge">
         <mat-card-title>Great Job!</mat-card-title>
         <p>Humans feel most comfortable in temperatures between 20°C and 23°C</p>
       </mat-card>
 
       <button *ngIf="isInChallenge" (click)="CheckAnswer()" mat-flat-button type="button">Confirm</button>
-      <button *ngIf="!isInChallenge" mat-flat-button type="button" routerLink="/home">Return to Dashboard</button>
+      <button *ngIf="!isInChallenge" class="animate__animated animate__fadeInUp animate__faster" mat-flat-button type="button" routerLink="/home">Return to Dashboard</button>
     </div>
 </div>
