Fixed layout errors

--- a/src/app/views/dashboard.component.html
+++ b/src/app/views/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="app">
     <div class="app-container">
         <header>
-            <span class="brand-name">Vent2U</span>
+            <span class="brand-name" routerLink="/home">Vent2U</span>
             <button type="button" routerLink="/zones" class="zone">
                 Zone 2
                 <mat-icon aria-hidden="false" aria-label="Select choose">create</mat-icon>
@@ -10,6 +10,5 @@
         <div class="app-content">
             <router-outlet></router-outlet>
         </div>
-        <button routerLink="/game" class="game"><mat-icon aria-hidden="false" aria-label="Learn!">import_contacts</mat-icon></button>
     </div>
 </div>
