--- a/src/app/views/feelings/room/room.component.html
+++ b/src/app/views/feelings/room/room.component.html
@@ -10,3 +10,5 @@
         I am satisfied with my choices
     </div>
 </div>
+
+<button routerLink="/game" class="game"><mat-icon aria-hidden="false" aria-label="Learn!">import_contacts</mat-icon></button>
