--- a/src/app/views/dashboard.component.css
+++ b/src/app/views/dashboard.component.css
@@ -6,6 +6,7 @@
     /*required to avoid margin collapse*/
     color: white;
     position: relative;
+    overflow: hidden;
 }
 
 .app.special {
@@ -23,10 +24,6 @@
 }
 
 .app-content {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
     height: calc(100% - 53px);
 }
 
@@ -34,12 +31,10 @@
 /* Header */
 
 header {
-    padding-top: 15px;
+    padding-top: 23px;
     font-size: 20px;
     font-weight: 300;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: fixed;
 }
 
 
@@ -59,17 +54,16 @@ nav {
     padding: 5px 8px;
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
-    margin-right: -30px;
-    display: flex;
-    align-items: center;
+    position: fixed;
+    right: 0;
+    text-align: left;
+    top: 15px;
 }
 
 .zone mat-icon {
     margin-left: 5px;
     font-size: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: inline;
 }
 
 nav ul {
@@ -90,10 +84,6 @@ nav ul li {
     text-align: center;
 }
 
-.brand-name {
-    margin-left: 15px;
-}
-
 .zone {
     background-color: rgba(255, 255, 255, 0.4);
     border-radius: 20px 0 0 20px;
@@ -101,15 +91,4 @@ nav ul li {
     color: white;
     border: none;
     font-size: 0.9em;
-}
-
-.game{
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    background-color: rgb(5, 117, 230);
-    border: none;
-    padding: 20px;
-    color: white;
-    border-radius: 13px 0 0 0;
 }
