--- a/src/app/views/feelings/humidity/humidity.component.html
+++ b/src/app/views/feelings/humidity/humidity.component.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1>Humidity</h1>
 <h2>How do you feel?</h2>
 <ul class="humidity">
@@ -9,3 +10,5 @@
     <button (click)="confirmSelection()">Confirm</button>
 </div>
 <goback></goback>
+    
+</div>
