--- a/src/app/views/feelings/room/room.component.css
+++ b/src/app/views/feelings/room/room.component.css
@@ -1,5 +1,9 @@
-:host {
-    width: 100%;
+.room{
+    padding-top: 60px;
+    height: 100vh;
+}
+
+h1 {
     text-align: center;
 }
 
@@ -8,14 +12,26 @@
     padding: 0;
     margin: 0;
     margin-top: 30px;
-    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 30px;
+    max-width: 260px;
+    margin: auto;
 }
 
 h1 {
     font-weight: 300;
+}
+
+.questions{
+    max-height: 75vh;
+    overflow: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.questions::-webkit-scrollbar {
+    display: none;
 }
 
 .questions li {
@@ -41,6 +57,7 @@ mat-icon {
     line-height: normal;
     height: auto;
     margin-bottom: 10px;
+    font-size: 2em;
 }
 
 .confirmation {
@@ -55,4 +72,15 @@ mat-icon {
     background-color: #021b78;
     margin-top: 3rem;
     cursor: pointer;
+}
+
+.game{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(5, 117, 230);
+    border: none;
+    padding: 20px;
+    color: white;
+    border-radius: 13px 0 0 0;
 }
