--- a/src/app/views/feelings/temperature/temperature.component.css
+++ b/src/app/views/feelings/temperature/temperature.component.css
@@ -1,3 +1,7 @@
+div.content {
+    padding-top: 60px;
+}
+
 h1,
 h2 {
     text-align: center;
@@ -8,8 +12,7 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    margin-top: 10rem;
-    margin-bottom: 7rem;
+    margin-top: 60px;
 }
 
 ul li {
@@ -24,7 +27,7 @@ ul li {
 
 ul li.selected {
     opacity: 1;
-    transform: scale(2);
+    transform: scale(1.5);
     margin-top: 15px;
     margin-bottom: 15px;
 }
@@ -45,9 +48,9 @@ button {
     border-radius: 2.5rem;
     border: 0;
     background-image: none;
-    padding: 25px 50px;
+    padding: 15px 20px;
     font-size: 20px;
-    font-weight: 600;
     color: #FFF;
     background-color: #021b78;
+    margin-top: 40px;
 }
