--- a/src/app/views/feelings/temperature/temperature.component.html
+++ b/src/app/views/feelings/temperature/temperature.component.html
@@ -1,3 +1,4 @@
+<div class="content">
 <h1>Temperature</h1>
 <ul class="humidity">
     <li *ngFor="let item of temperature" (click)="selectItem(item.id)" [ngClass]="{'selected': item.selected }">
@@ -8,3 +9,4 @@
     <button (click)="confirmSelection()">Confirm</button>
 </div>
 <goback></goback>
+</div>
