--- a/src/app/views/request/confirmation/confirmation.component.css
+++ b/src/app/views/request/confirmation/confirmation.component.css
@@ -1,3 +1,8 @@
+div.content{
+    padding-top: 60px;
+    position: relative;
+}
+
 :host {
     width: 100%;
     color: #0675e8;
@@ -20,9 +25,9 @@ ul {
 }
 
 .list-wrapper {
-    margin-top: 7rem;
-    margin-bottom: 10rem;
+    margin-top: 30px;
     height: 15rem;
+    overflow: scroll;
 }
 
 ul.only-one {
@@ -87,8 +92,16 @@ mat-icon {
 /* Slide to Confirm */
 
 .confirm-selection {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 70px;
+}
+
+.swipper{
     position: relative;
-    width: 100%;
+    max-width: 300px;
+    margin: auto;
 }
 
 .component-text {
@@ -220,4 +233,11 @@ mat-icon {
 
 .pullee::-ms-tooltip {
     display: none;
+}
+
+goback{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
