--- a/src/app/views/request/result/result.component.css
+++ b/src/app/views/request/result/result.component.css
@@ -1,3 +1,7 @@
+div.content{
+    padding-top: 60px;
+}
+
 :host {
     width: 100%;
     color: #0675e8;
@@ -40,13 +44,13 @@ div.completed span {
     align-items: center;
     justify-content: center;
     border-radius: 100%;
-    height: 10rem;
-    width: 10rem;
+    height: 100px;
+    width: 100px;
     text-align: center;
 }
 
 div.completed span mat-icon {
-    font-size: 7rem;
+    font-size: 5em;
     height: auto;
     width: auto;
 }
@@ -136,18 +140,23 @@ ul li>mat-icon {
 .return.active {
     pointer-events: all;
     opacity: 1;
+    position: fixed;
+    bottom: 15px;
+    left: 0;
+    right: 0;
 }
 
 button {
+    display: inline-block;
     border-radius: 2.5rem;
     border: 0;
     background-image: none;
-    padding: 25px 50px 25px 38px;
+    padding: 15px 20px;
     font-size: 20px;
-    font-weight: 600;
     color: #FFF;
     background-color: #021b78;
-    line-height: normal;
+    margin: auto;
+    position: relative;
 }
 
 button mat-icon {
